--- a/css/main.css
+++ b/css/main.css
@@ -962,7 +962,7 @@ button {
   font-size: 16px;
   line-height: 1.25;
   color: #fff;
-  background-color: var(--footer);
+  background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1161,11 +1161,10 @@ button {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card-text {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
+.link-card:hover .menu,
+.link-card:focus .menu {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .daddy {
@@ -1190,15 +1189,16 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-card:hover .menu,
-.link-card:focus .menu {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
 .paragraph {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
+}
+
+.card-text {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 /*# sourceMappingURL=main.css.map */
