--- a/scss/components/portfolio/_portfolio.scss
+++ b/scss/components/portfolio/_portfolio.scss
@@ -57,13 +57,11 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-}
 
-.card-text {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
+  &:hover .menu,
+  &:focus .menu {
+    transform: translateY(0);
+  }
 }
 
 .daddy {
@@ -84,13 +82,14 @@
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-card:hover .menu,
-.link-card:focus .menu {
-  transform: translateY(0);
-}
-
 .paragraph {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
+}
+.card-text {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
