--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -5,6 +5,10 @@
 
   border-bottom: 1px solid #ececec;
   background-color: var(--primary-backgrounds);
+
+  @media screen and (min-width: 768px) {
+    height: 81px;
+  }
 }
 .header__container {
   display: flex;
